更新了判空bug